--- a/works/out-of-context/style.css
+++ b/works/out-of-context/style.css
@@ -109,6 +109,7 @@ a:hover {
    font-size: 3.5rem;
   }
   .about-project {
-    top: -150px;
+    top: -143px;
+    margin-bottom: 100px;
 }
 }
